syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "google/protobuf/timestamp.proto";
import "ci/proto/storage/task_messages.proto";
import "ci/proto/storage/check_task.proto";
import "ci/proto/storage/common.proto";

message ResultForPostProcessor {
    AutocheckTestId id = 1;

    string branch = 2;
    uint64 revision_number = 3;
    uint64 chunk_hid = 4;

    FullTaskId full_task_id = 5;
    int32 autocheck_partition = 6;
    bool is_right = 7;

    ResultType result_type = 10;
    TestStatus test_status = 11;

    string uid = 20;

    string path = 21;
    string name = 22;
    string subtest_name = 23;
    string service = 24;
    Owners owners = 25;
    string revision = 26;

    repeated string tags = 30;
    map<string, double> metrics = 31;

    google.protobuf.Timestamp created = 40;

    // deprecated
    string old_id = 100;  // deprecated id, use hid
    string old_suite_id = 101;  // deprecated id, use suite_hid
}

message ResultsForPostProcessor {
    repeated ResultForPostProcessor results = 1;
}

message PostProcessorInMessage {
    MessageMeta meta = 1;

    oneof message {
        ResultsForPostProcessor test_results = 10;
    }
}
